--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version:'2.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version:'2.2'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-
+    compile group: 'com.typesafe', name: 'config', version: '1.4.0'
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
