--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,21 +5,40 @@ cache {
   #缓存来源
   source {
     #单个数据回写尝试次数
-    flush_try_count = 2
+    flushTryCount = 2
     #单个数据回写超时
-    flush_time_out = 500
+    flushTimeOut = 500ms
     #缓存数据的总量，primary为单位
-    maximum_count = 500
+    maximumCount = 500
     #回写数据的配置
     flush {
       #批量回写数据个数上限
-      batch_count = 500
+      batchCount = 500
       #出发回写的过期时间，秒
-      expired_duration = 10
+      expiredDuration = 10
     }
 
-    #mongodb 的相关配置
+    # 对应的数据配置
     mongodb {
+      db = demo
+      name = cache
+    }
+  }
+}
+
+# 数据库相关的配置
+db {
+  mongodb = [
+    {
+      #名称
+      application = cache
+      # 链接超时，毫秒
+      connectTimeout = 2s
+      # 读写超时，毫秒
+      readTimeout = 500s
+      # 链接最大数量
+      connectionMaxSize = 10
+      #分区配置
       sharding = [
         {
           host = 127.0.0.1
@@ -30,7 +49,8 @@ cache {
           port = 27028
         }
       ]
-      db = demo
+      # 对应的名字~
+      names = [cache]
     }
-  }
+  ]
 }
