optimization and predication of the first time loading

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,30 +1,43 @@
 
 #缓存相关的配置
 cache {
+  #缓存的类型
+  type = MongoDb
+  #单个数据回写尝试次数
+  flushTryCount = 2
+  #单个数据回写超时
+  flushTimeOut = 500ms
+  #缓存数据的总量，primary为单位
+  maximumCount = 500
 
-  #缓存来源
-  source {
-    #单个数据回写尝试次数
-    flushTryCount = 2
-    #单个数据回写超时
-    flushTimeOut = 500ms
-    #缓存数据的总量，primary为单位
-    maximumCount = 500
-    #回写数据的配置
-    flush {
-      #批量回写数据个数上限
-      batchCount = 500
-      #出发回写的过期时间，秒
-      expiredDuration = 10
-    }
+  #回写数据的配置
+  flush {
+    #批量回写数据个数上限
+    batchCount = 500
+    #出发回写的过期时间，秒
+    expiredDuration = 10
+  }
 
-    # 对应的数据配置
-    mongodb {
-      db = demo
-      name = cache
-    }
+  # 对应的数据配置
+  mongodb {
+    #缓存db
+    name = cache
+    #数据库名称
+    db = demo
+  }
+
+  #定时调度器
+  executor{
+    #线程数量
+    threadCount = 5
+  }
+
+  #缓存对应的数据相关配置
+  data {
+    decorators = [logger]
   }
 }
+
 
 # 数据库相关的配置
 db {
