class configuration instead of annotation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,15 +3,15 @@
 cache {
   #缓存的类型
   type = MongoDb
-  #单个数据回写尝试次数
-  flushTryCount = 2
-  #单个数据回写超时
-  flushTimeOut = 500ms
   #缓存数据的总量，primary为单位
   maximumCount = 500
 
   #回写数据的配置
   flush {
+    #单个数据回写尝试次数
+    tryCount = 2
+    #单个数据回写超时
+    timeOut = 500ms
     #批量回写数据个数上限
     batchCount = 500
     #出发回写的过期时间，秒
@@ -36,6 +36,27 @@ cache {
   data {
     decorators = [logger]
   }
+
+  #不使用注解，以免手抽被修改了数据[数据定义就不能修改了]
+  classes = [
+    # 表 material
+    {
+      className = com.game.cache.source.UserItem
+      tableName = material
+      primarySharedId = 1
+      delayUpdate = true
+      loadOnShared = true
+    },
+    {
+      className = com.game.cache.source.UserCurrency
+      tableName = material
+      primarySharedId = 2
+      delayUpdate = true
+      loadOnShared = true
+    }
+
+    # 表
+  ]
 }
 
 
