--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'com.typesafe', name: 'config', version: '1.4.0'
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.0'
+    compile group: 'commons-pool', name: 'commons-pool', version:'1.6'
+    compile group: 'redis.clients', name: 'jedis', version: '3.1.0'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
