--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,8 +26,13 @@ cache {
     db = demo
   }
 
+  redis {
+    #缓存redis
+    name = cache
+  }
+
   #定时调度器
-  executor{
+  executor {
     #线程数量
     threadCount = 5
   }
@@ -39,23 +44,28 @@ cache {
 
   #不使用注解，以免手抽被修改了数据[数据定义就不能修改了]
   classes = [
-    # 表 material
     {
-      className = com.game.cache.source.UserItem
+      # 没有DB缓存的情况下，配置为 nodb
       tableName = material
-      primarySharedId = 1
-      delayUpdate = true
-      loadOnShared = true
-    },
-    {
-      className = com.game.cache.source.UserCurrency
-      tableName = material
-      primarySharedId = 2
-      delayUpdate = true
-      loadOnShared = true
+      sharedClasses = [
+        {
+          className = com.game.cache.source.UserItem
+          primarySharedId = 1
+          delayUpdate = true
+          loadOnShared = true
+          versionId = 1
+        },
+        {
+          className = com.game.cache.source.UserCurrency
+          primarySharedId = 2
+          delayUpdate = true
+          loadOnShared = true
+          versionId = 1
+        }
+      ]
+      # 是否使用Redis中间缓存
+      enableRedis = true
     }
-
-    # 表
   ]
 }
 
@@ -71,7 +81,7 @@ db {
       # 读写超时，毫秒
       readTimeout = 500s
       # 链接最大数量
-      connectionMaxSize = 10
+      maxConnection = 10
       #分区配置
       sharding = [
         {
@@ -81,6 +91,43 @@ db {
         {
           host = 127.0.0.1
           port = 27028
+        }
+      ]
+      # 对应的名字~
+      names = [cache]
+    }
+  ]
+
+
+  redis = [
+    {
+      # 链接超时，毫秒
+      connectTimeout = 2s
+      # 读写超时，毫秒
+      readTimeout = 500s
+      # 链接最大数量
+      maxConnection = 10
+      #分区配置
+      sharding = [
+//        {
+//          host = 127.0.0.1
+//          port = 7108
+//          password = 123456
+//        },
+//
+//        {
+//          host = 127.0.0.1
+//          port = 7109
+//          password = 123456
+//        },
+//        {
+//          host = 127.0.0.1
+//          port = 7110
+//          password = 123456
+//        }
+        {
+          host = 10.17.2.62
+          port = 6379
         }
       ]
       # 对应的名字~
