--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,13 +9,17 @@ cache {
   #回写数据的配置
   flush {
     #单个数据回写尝试次数
-    tryCount = 2
+    tryOneCount = 2
     #单个数据回写超时
     timeOut = 500ms
     #批量回写数据个数上限
     batchCount = 500
     #出发回写的过期时间，秒
-    expiredDuration = 5
+    expiredDuration = 50s
+    #回写的日志信息
+    logPath = D:/demo/cache/logs/cache
+    #回写所有数据尝试次数
+    tryAllCount = 10
   }
 
   # 对应的数据配置
@@ -52,19 +56,18 @@ cache {
           className = com.game.cache.source.UserItem
           primarySharedId = 1
           delayUpdate = true
-          loadOnShared = true
           versionId = 1
         },
         {
           className = com.game.cache.source.UserCurrency
           primarySharedId = 2
           delayUpdate = true
-          loadOnShared = true
           versionId = 1
         }
       ]
       # 是否使用Redis中间缓存
       enableRedis = true
+      loadOnSharedId = [1, 2]
     }
   ]
 }
