--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,6 @@
 cache {
   #缓存的类型
   type = MongoDb
-  #缓存数据的总量，primary为单位
-  maximumCount = 500
 
   #回写数据的配置
   flush {
@@ -16,8 +14,10 @@ cache {
     batchCount = 500
     #出发回写的过期时间，秒
     expiredDuration = 50s
+    #回写的最大数量，因为枷锁，所以有关系
+    maximumCount = 10
     #回写的日志信息
-    logPath = D:/demo/cache/logs/cache
+    logPath = logs/cache
     #回写所有数据尝试次数
     tryAllCount = 10
   }
@@ -38,7 +38,7 @@ cache {
   #定时调度器
   executor {
     #线程数量
-    threadCount = 5
+    threadCount = 20
   }
 
   #缓存对应的数据相关配置
