很大改动: 主键改成long类型 1. 可变主键不可控，业务很难知道自己用了那么KEY 2. 主键序列化也麻烦，long还能简化了

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -51,6 +51,11 @@ cache {
     {
       # 没有DB缓存的情况下，配置为 nodb
       tableName = material
+      # 是否玩家的缓存数据
+      userClass = true
+      # 是否使用Redis中间缓存
+      enableRedis = true
+      # 这张表下面的class
       sharedClasses = [
         {
           className = com.game.cache.source.UserItem
@@ -65,8 +70,7 @@ cache {
           versionId = 1
         }
       ]
-      # 是否使用Redis中间缓存
-      enableRedis = true
+      # 第一次加载表的时候，全部加载的数据
       loadOnSharedId = [1, 2]
     }
   ]
