第一次加载: redis 批量加载。

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 
 #缓存相关的配置
 cache {
+
   #缓存的类型
   type = MongoDb
 
@@ -33,6 +34,13 @@ cache {
   redis {
     #缓存redis
     name = cache
+
+    db {
+      #数据库中间缓存的过期时间
+      lifeDuration = 7d
+      #数据库中间缓存的过期时间, 计算偏差值
+      offsetDuration = 6h
+    }
   }
 
   #定时调度器
@@ -46,34 +54,7 @@ cache {
     decorators = [logger]
   }
 
-  #不使用注解，以免手抽被修改了数据[数据定义就不能修改了]
-  classes = [
-    {
-      # 没有DB缓存的情况下，配置为 nodb
-      tableName = material
-      # 是否玩家的缓存数据
-      userClass = true
-      # 是否使用Redis中间缓存
-      enableRedis = true
-      # 这张表下面的class
-      sharedClasses = [
-        {
-          className = com.game.cache.source.UserItem
-          primarySharedId = 1
-          delayUpdate = true
-          versionId = 1
-        },
-        {
-          className = com.game.cache.source.UserCurrency
-          primarySharedId = 2
-          delayUpdate = true
-          versionId = 1
-        }
-      ]
-      # 第一次加载表的时候，全部加载的数据
-      loadOnSharedId = [1, 2]
-    }
-  ]
+  class_config = src/main/resources/cache/classes
 }
 
 
