1. CacheInformation: 只记录过期时间. 2. 处理缓存的过期~

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -37,9 +37,9 @@ cache {
 
     db {
       #数据库中间缓存的过期时间
-      lifeDuration = 7d
+      lifeDuration = 60s
       #数据库中间缓存的过期时间, 计算偏差值
-      offsetDuration = 6h
+      offsetDuration = 15s
     }
   }
 
