--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.0'
     compile group: 'commons-pool', name: 'commons-pool', version:'1.6'
     compile group: 'redis.clients', name: 'jedis', version: '3.1.0'
+    compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.1.4'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
