--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile group: 'commons-pool', name: 'commons-pool', version:'1.6'
     compile group: 'redis.clients', name: 'jedis', version: '3.1.0'
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.1.4'
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
