--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile group: 'redis.clients', name: 'jedis', version: '3.1.0'
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.1.4'
     implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.7.0'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
