久远的改动: 版本应该未完整

--- a/src/main/resources/core_cache_config.conf
+++ b/src/main/resources/core_cache_config.conf
@@ -28,14 +28,12 @@ mongodb {
 }
 
 redis {
-  #缓存redis
-  name = cache
 
   db {
     #数据库中间缓存的过期时间
     lifeDuration = 60s
     #数据库中间缓存的过期时间, 计算偏差值
-    offsetDuration = 15s
+    ttlInAdvanceDuration = 15s
   }
 }
 
