--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile group: 'com.googlecode.aviator', name: 'aviator', version: '5.1.4'
     implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
     implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.7.0'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
